fix: Minor appearance problems on Safari iOS

--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -940,6 +940,7 @@ main > :not([hidden]) ~ :not([hidden]) {
 }
 
 main {
+  overflow: hidden;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
@@ -972,6 +973,7 @@ dialog {
 }
 
 dialog::backdrop {
+  position: fixed;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   --tw-bg-opacity: 0.1;
 }
