--- a/tailwind/input.css
+++ b/tailwind/input.css
@@ -27,7 +27,7 @@ header {
 }
 
 main {
-    @apply space-y-4 mx-auto mb-24 px-6 w-full max-w-lg
+    @apply space-y-4 mx-auto mb-24 px-6 w-full max-w-lg overflow-hidden
 }
 
 dialog {
@@ -36,7 +36,7 @@ dialog {
 }
 
 dialog::backdrop {
-    @apply bg-scrim bg-opacity-10
+    @apply bg-scrim bg-opacity-10 fixed
 }
 
 @keyframes open {
